--- a/index.html
+++ b/index.html
@@ -3,49 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Consultorio Monsant</title>
+  <title>Monsant</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo Monsant" class="logo">
+    <img src="logo mst_3.jpg" alt="Logo del consultorio Monsant" class="logo" loading="lazy">
   </header>
 
-  <nav>
-    <a href="#servicios">Servicios</a>
-    <a href="#nosotros">Nosotros</a>
-    <a href="#contacto">Contacto</a>
-  </nav>
-
   <main>
-    <section id="servicios">
-      <h2>Servicios</h2>
-      <ul>
-        <li>Ortodoncia</li>
-        <li>Implantes dentales</li>
-        <li>Limpieza y profilaxis</li>
-        <li>Blanqueamiento dental</li>
-      </ul>
-    </section>
-
-    <section id="nosotros">
-      <h2>Sobre Nosotros</h2>
-      <p>En Monsant, nos dedicamos a ofrecer atención odontológica con profesionalismo, calidez y tecnología de punta.</p>
-    </section>
-
-    <section id="contacto">
+    <section id="contacto" class="fade-in">
       <h2>Contáctanos</h2>
-      <p>Dirección: Calle Ficticia #123</p>
-      <p>Teléfono: (123) 456-7890</p>
-      <p>Email: contacto@monsant.com</p>
-      <p>WhatsApp: <a href="https://wa.me/1234567890" target="_blank">Escríbenos</a></p>
-      <p>Instagram: <a href="https://instagram.com/monsantodontologia" target="_blank">@monsantodontologia</a></p>
-      <a href="https://wa.me/1234567890" class="boton-cita" target="_blank">Agendar cita</a>
+      <div class="contacto-contenedor">
+        <div class="mapa">
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.0682245530907!2d-75.5826136244777!3d6.254742326227069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429342b0381af%3A0xc086c21b5733f39e!2sMonsant!5e0!3m2!1ses!2sco!4v1751381843076!5m2!1ses!2sco"
+            width="100%"
+            height="300"
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+        <div class="info-redes">
+          <p><strong>Dirección:</strong> Cl. 49B #64b-37, Laureles - Estadio, Medellín, Laureles, Medellín, Antioquia</p>
+          <p><strong>Teléfono:</strong> 3045822043</p>
+          <a href="https://wa.me/573045822043" class="boton-cita" target="_blank">Agendar cita por WhatsApp</a>
+          <div class="redes">
+            <a href="https://wa.me/1234567890" target="_blank">
+              <img src="whatsapp.png" alt="WhatsApp">
+            </a>
+            <a href="https://instagram.com/monsantodontologia" target="_blank">
+              <img src="instagram.png" alt="Instagram">
+            </a>
+            <a href="https://www.tiktok.com/@monsant_odontolog?_t=ZS-8xfREG8hBFQ&_r=1" target="_blank">
+              <img src="tik-tok.png" alt="TikTok">
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Monsant Odontología. Todos los derechos reservados.</p>
-  </footer>
+  <p class="invisible">
+    Consultorio odontológico Monsant en Medellín, especialistas en ortodoncia, estética dental, implantes y más. Ubicados en Laureles, atención profesional con tecnología de punta.
+  </p>
 </body>
 </html>
