cambiao el icono
cambie el icono a ver como se ve

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           </iframe>
         </div>
         <div class="info-redes">
-          <p><strong>Dirección:</strong> Cl. 49B #64b-37, Laureles - Estadio, Medellín, Laureles, Medellín, Antioquia</p>
+          <p><strong>Dirección:</strong> Cl. 49B #64b-37,
+          <a Laureles </a>Cerca al Estadio Atanacio Girardot </a>
+          Laureles, Medellín, Antioquia</p>
           <p><strong>Teléfono:</strong> 3045822043</p>
           <a href="https://wa.me/573045822043" class="boton-cita" target="_blank">Agendar cita por WhatsApp</a>
           <div class="redes">
