agregar contenivo y remplazar iconos y direcciones

--- a/index.html
+++ b/index.html
@@ -12,6 +12,27 @@
     <img src="logo mst_3.jpg" alt="Logo del consultorio Monsant" class="logo" loading="lazy">
   </header>
 
+  <section id="servicios" class="fade-in">
+    <h2>Servicios</h2>
+    <div class="servicios-contenedor">
+      <div class="servicio">
+        <img src="servicio1.jpg" alt="Limpieza dental">
+        <h3>Limpieza Dental</h3>
+        <p>Eliminación de placa y sarro para mantener tu sonrisa sana y brillante.</p>
+      </div>
+      <div class="servicio">
+        <img src="servicio2.jpg" alt="Ortodoncia">
+        <h3>Ortodoncia</h3>
+        <p>Corrección de la posición dental con brackets o alineadores transparentes.</p>
+      </div>
+      <div class="servicio">
+        <img src="servicio3.jpg" alt="Blanqueamiento dental">
+        <h3>Blanqueamiento</h3>
+        <p>Tratamientos estéticos para lograr dientes más blancos en pocas sesiones.</p>
+      </div>
+    </div>
+  </section>
+
   <main>
     <section id="contacto" class="fade-in">
       <h2>Contáctanos</h2>
@@ -28,9 +49,7 @@
           </iframe>
         </div>
         <div class="info-redes">
-          <p><strong>Dirección:</strong> Cl. 49B #64b-37,
-          <a Laureles </a>Cerca al Estadio Atanacio Girardot </a>
-          Laureles, Medellín, Antioquia</p>
+          <p><strong>Dirección:</strong> Cl. 49B #64b-37, Laureles - Estadio, Medellín, Laureles, Medellín, Antioquia</p>
           <p><strong>Teléfono:</strong> 3045822043</p>
           <a href="https://wa.me/573045822043" class="boton-cita" target="_blank">Agendar cita por WhatsApp</a>
           <div class="redes">
