Mejora de la parte de redes y contacto

--- a/index.html
+++ b/index.html
@@ -49,20 +49,31 @@
           </iframe>
         </div>
         <div class="info-redes">
-          <p><strong>Dirección:</strong> Cl. 49B #64b-37, Laureles - Estadio, Medellín, Laureles, Medellín, Antioquia</p>
-          <p><strong>Teléfono:</strong> 3045822043</p>
-          <a href="https://wa.me/573045822043" class="boton-cita" target="_blank">Agendar cita por WhatsApp</a>
+          <p><strong>📍 Dirección:</strong> Cl. 49B #64b-37, Laureles - Estadio, Medellín, Antioquia</p>
+          <p><strong>📞 Teléfono:</strong> <a href="tel:+573045822043">304 582 2043</a></p>
+
+          <a href="https://wa.me/573045822043" class="boton-cita" target="_blank" rel="noopener">
+            💬 Agendar cita por WhatsApp
+          </a>
+
           <div class="redes">
-            <a href="https://wa.me/1234567890" target="_blank">
-              <img src="whatsapp.png" alt="WhatsApp">
+            <a href="https://wa.me/573045822043" target="_blank" aria-label="WhatsApp Monsant" rel="noopener">
+              <img src="whatsapp.png" alt="WhatsApp Monsant">
             </a>
-            <a href="https://instagram.com/monsantodontologia" target="_blank">
-              <img src="instagram.png" alt="Instagram">
+            <a href="https://instagram.com/monsantodontologia" target="_blank" aria-label="Instagram Monsant" rel="noopener">
+              <img src="instagram.png" alt="Instagram Monsant">
             </a>
-            <a href="https://www.tiktok.com/@monsant_odontolog?_t=ZS-8xfREG8hBFQ&_r=1" target="_blank">
-              <img src="tik-tok.png" alt="TikTok">
+            <a href="https://www.tiktok.com/@monsant_odontolog?_t=ZS-8xfREG8hBFQ&_r=1" target="_blank" aria-label="TikTok Monsant" rel="noopener">
+              <img src="tik-tok.png" alt="TikTok Monsant">
             </a>
           </div>
+
+          <a href="https://www.google.com/maps/place/Monsant/@6.2547423,-75.5826136,17z/data=!4m8!3m7!1s0x8e4429342b0381af:0xc086c21b5733f39e!8m2!3d6.2547423!4d-75.5800387!9m1!1b1!16s%2Fg%2F11t6bcprzp?entry=ttu"
+             class="boton-google" target="_blank" rel="noopener">
+            ⭐ Déjanos una reseña en Google
+          </a>
+        </div>
+
         </div>
       </div>
     </section>
