cambio de letra a color blanco

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
           <a href="https://www.google.com/maps/place/Monsant/@6.2547423,-75.5826136,17z/data=!4m8!3m7!1s0x8e4429342b0381af:0xc086c21b5733f39e!8m2!3d6.2547423!4d-75.5800387!9m1!1b1!16s%2Fg%2F11t6bcprzp?entry=ttu"
              class="boton-google" target="_blank" rel="noopener">
-            ⭐ Déjanos una reseña en Google
+            ⭐⭐⭐⭐⭐ Déjanos una reseña en Google
           </a>
         </div>
 
