--- a/index.html
+++ b/index.html
@@ -82,5 +82,17 @@
   <p class="invisible">
     Consultorio odontológico Monsant en Medellín, especialistas en ortodoncia, estética dental, implantes y más. Ubicados en Laureles, atención profesional con tecnología de punta.
   </p>
+  <div class="redes-flotantes">
+    <a href="https://wa.me/573045822043" target="_blank" aria-label="WhatsApp Monsant">
+      <img src="whatsapp.png" alt="WhatsApp">
+    </a>
+    <a href="https://instagram.com/monsantodontologia" target="_blank" aria-label="Instagram Monsant">
+      <img src="instagram.png" alt="Instagram">
+    </a>
+    <a href="https://www.tiktok.com/@monsant_odontolog?_t=ZS-8xfREG8hBFQ&_r=1" target="_blank" aria-label="TikTok Monsant">
+      <img src="tik-tok.png" alt="TikTok">
+    </a>
+  </div>
+
 </body>
 </html>
