--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <a href="https://wa.me/573045822043" target="_blank" aria-label="WhatsApp Monsant">
       <img src="whatsapp.png" alt="WhatsApp">
     </a>
-    <a href="https://instagram.com/monsantodontologia" target="_blank" aria-label="Instagram Monsant">
+    <a href="https://www.instagram.com/monsant_odontologia?igsh=MWE1c3UyMDljNGxtMw==" target="_blank" aria-label="Instagram Monsant">
       <img src="instagram.png" alt="Instagram">
     </a>
     <a href="https://www.tiktok.com/@monsant_odontolog?_t=ZS-8xfREG8hBFQ&_r=1" target="_blank" aria-label="TikTok Monsant">
