cambios en el header

--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="favicon.png">
 </head>
-<body>
-  <header>
-    <img src="logo mst_3.jpg" alt="Logo del consultorio Monsant" class="logo" loading="lazy">
-  </header>
+<body id="top">
+    <header class="header-minimal">
+      <div class="contenedor-header">
+        <a href="#top" class="logo-link">
+          <img src="logo mst_3.jpg" alt="Logo Monsant" class="logo">
+        </a>
+
+        <nav class="menu-minimal">
+          <ul>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#testimonios">Testimonios</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
   <section id="servicios" class="fade-in">
     <h2>Servicios</h2>
@@ -56,17 +69,7 @@
             💬 Agendar cita por WhatsApp
           </a>
 
-          <div class="redes">
-            <a href="https://wa.me/573045822043" target="_blank" aria-label="WhatsApp Monsant" rel="noopener">
-              <img src="whatsapp.png" alt="WhatsApp Monsant">
-            </a>
-            <a href="https://instagram.com/monsantodontologia" target="_blank" aria-label="Instagram Monsant" rel="noopener">
-              <img src="instagram.png" alt="Instagram Monsant">
-            </a>
-            <a href="https://www.tiktok.com/@monsant_odontolog?_t=ZS-8xfREG8hBFQ&_r=1" target="_blank" aria-label="TikTok Monsant" rel="noopener">
-              <img src="tik-tok.png" alt="TikTok Monsant">
-            </a>
-          </div>
+        
 
           <a href="https://www.google.com/maps/place/Monsant/@6.2547423,-75.5826136,17z/data=!4m8!3m7!1s0x8e4429342b0381af:0xc086c21b5733f39e!8m2!3d6.2547423!4d-75.5800387!9m1!1b1!16s%2Fg%2F11t6bcprzp?entry=ttu"
              class="boton-google" target="_blank" rel="noopener">
