--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Monsant</title>
+  <title>Monsant Especialistas en Odontología</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="favicon.png">
 </head>
@@ -16,8 +16,10 @@
 
         <nav class="menu-minimal">
           <ul>
-            <li><a href="#about">Sobre</a></li>
+            <li><a href="#about">No se que poner aquí</a></li>
             <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#Equipo">Equipo</a></li>
+            <li><a href="#resultados">Resultados</a></li>
             <li><a href="#testimonios">Testimonios</a></li>
             <li><a href="#contacto">Contacto</a></li>
           </ul>
@@ -45,7 +47,38 @@
       </div>
     </div>
   </section>
+  <section id="Equipo">
+    <h2>Conoce a nuestro equipo</h2>
+    <div class="equipo-grid">
+      <article>
+        <img src="SantiagoMon.png" alt="Dr. Santiago Monsanlve">
+        <h3>Dr. Andrés Monsant</h3>
+        <p>Odontólogo especializado en estética dental y ortodoncia. +10 años de experiencia.</p>
+      </article>
+      <article>
+        <img src="SantiagoMon.png" alt="Dra. Maria Clara Uribe">
+        <h3>Dra. Maria Clara Uribe</h3>
+        <p>Ortodoncista Especialista. +10 años de experiencia.</p>
+      </article>
+      <!-- más miembros -->
+    </div>
+  </section>
 
+  <section id="resultados" class="fade-in">
+    <h2>Antes y después de nuestros pacientes</h2>
+    <p class="intro">Casos reales con resultados notables. Desliza para ver más.</p>
+
+    <div class="galeria-scroll">
+      <img src="antes1.jpg" alt="Antes y después 1">
+      <img src="antes2.jpg" alt="Antes y después 2">
+      <img src="antes1.jpg" alt="Antes y después 3">
+      <img src="antes2.jpg" alt="Antes y después 4">
+      <!-- Agrega más imágenes si deseas -->
+    </div>
+  </section>
+
+
+  
   <main>
     <section id="contacto" class="fade-in">
       <h2>Contáctanos</h2>
