--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monsant Especialistas en Odontología</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="iconos/favicon.png">
 </head>
 <body id="top">
     <header class="header-minimal">
       <div class="contenedor-header">
         <a href="#top" class="logo-link">
-          <img src="logo mst_3.jpg" alt="Logo Monsant" class="logo">
+          <img src="iconos/logo mst_3.jpg" alt="Logo Monsant" class="logo">
         </a>
 
         <nav class="menu-minimal">
           <ul>
-            <li><a href="#about">No se que poner aquí</a></li>
+              <li>
+                <a href="#idioma" class="idioma">
+                  <img src="iconos/english.png" alt="English" class="icono-bandera">
+                  English
+                </a>
+              </li>
             <li><a href="#servicios">Servicios</a></li>
             <li><a href="#Equipo">Equipo</a></li>
             <li><a href="#resultados">Resultados</a></li>
@@ -31,17 +36,17 @@
     <h2>Servicios</h2>
     <div class="servicios-contenedor">
       <div class="servicio">
-        <img src="servicio1.jpg" alt="Limpieza dental">
+        <img src="imagenes/servicio1.jpg" alt="Limpieza dental">
         <h3>Limpieza Dental</h3>
         <p>Eliminación de placa y sarro para mantener tu sonrisa sana y brillante.</p>
       </div>
       <div class="servicio">
-        <img src="servicio2.jpg" alt="Ortodoncia">
+        <img src="imagenes/servicio2.jpg" alt="Ortodoncia">
         <h3>Ortodoncia</h3>
         <p>Corrección de la posición dental con brackets o alineadores transparentes.</p>
       </div>
       <div class="servicio">
-        <img src="servicio3.jpg" alt="Blanqueamiento dental">
+        <img src="imagenes/servicio3.jpg" alt="Blanqueamiento dental">
         <h3>Blanqueamiento</h3>
         <p>Tratamientos estéticos para lograr dientes más blancos en pocas sesiones.</p>
       </div>
@@ -51,12 +56,12 @@
     <h2>Conoce a nuestro equipo</h2>
     <div class="equipo-grid">
       <article>
-        <img src="SantiagoMon.png" alt="Dr. Santiago Monsanlve">
+        <img src="imagenes/SantiagoMon.png" alt="Dr. Santiago Monsanlve">
         <h3>Dr. Andrés Monsant</h3>
         <p>Odontólogo especializado en estética dental y ortodoncia. +10 años de experiencia.</p>
       </article>
       <article>
-        <img src="SantiagoMon.png" alt="Dra. Maria Clara Uribe">
+        <img src="imagenes/SantiagoMon.png" alt="Dra. Maria Clara Uribe">
         <h3>Dra. Maria Clara Uribe</h3>
         <p>Ortodoncista Especialista. +10 años de experiencia.</p>
       </article>
@@ -65,17 +70,20 @@
   </section>
 
   <section id="resultados" class="fade-in">
-    <h2>Antes y después de nuestros pacientes</h2>
-    <p class="intro">Casos reales con resultados notables. Desliza para ver más.</p>
+    <h2>Antes y después</h2>
+    <p class="intro">Mira algunos de los resultados reales que hemos logrado en Monsant.</p>
 
-    <div class="galeria-scroll">
-      <img src="antes1.jpg" alt="Antes y después 1">
-      <img src="antes2.jpg" alt="Antes y después 2">
-      <img src="antes1.jpg" alt="Antes y después 3">
-      <img src="antes2.jpg" alt="Antes y después 4">
-      <!-- Agrega más imágenes si deseas -->
+    <div class="galeria-grid">
+      <img src="imagenes/antes1.jpg" alt="Resultado 1 - Antes y después">
+      <img src="imagenes/antes2.jpg" alt="Resultado 2 - Antes y después">
+      <img src="imagenes/antes3.jpg" alt="Resultado 3 - Antes y después">
+      <img src="imagenes/antes4.jpg" alt="Resultado 4 - Antes y después">
+      <img src="imagenes/antes2.jpg" alt="Resultado 5 - Antes y después">
+      <img src="imagenes/antes4.jpg" alt="Resultado 6 - Antes y después">
     </div>
   </section>
+
+
 
 
   
@@ -120,13 +128,13 @@
   </p>
   <div class="redes-flotantes">
     <a href="https://wa.me/573045822043" target="_blank" aria-label="WhatsApp Monsant">
-      <img src="whatsapp.png" alt="WhatsApp">
+      <img src="iconos/whatsapp.png" alt="WhatsApp">
     </a>
     <a href="https://www.instagram.com/monsant_odontologia?igsh=MWE1c3UyMDljNGxtMw==" target="_blank" aria-label="Instagram Monsant">
-      <img src="instagram.png" alt="Instagram">
+      <img src="iconos/instagram.png" alt="Instagram">
     </a>
     <a href="https://www.tiktok.com/@monsant_odontolog?_t=ZS-8xfREG8hBFQ&_r=1" target="_blank" aria-label="TikTok Monsant">
-      <img src="tik-tok.png" alt="TikTok">
+      <img src="iconos/tik-tok.png" alt="TikTok">
     </a>
   </div>
 
