simagenes de galeria optimizadadimagenes optimisadas

--- a/index.html
+++ b/index.html
@@ -70,21 +70,24 @@
   </section>
 
   <section id="resultados" class="fade-in">
-    <h2>Antes y después</h2>
-    <p class="intro">Mira algunos de los resultados reales que hemos logrado en Monsant.</p>
+    <h2>Resultados reales</h2>
+    <p class="intro">Casos de pacientes tratados en Monsant. Desliza o haz clic para ver en detalle.</p>
 
-    <div class="galeria-grid">
-      <img src="imagenes/antes1.jpg" alt="Resultado 1 - Antes y después">
-      <img src="imagenes/antes2.jpg" alt="Resultado 2 - Antes y después">
-      <img src="imagenes/antes3.jpg" alt="Resultado 3 - Antes y después">
-      <img src="imagenes/antes4.jpg" alt="Resultado 4 - Antes y después">
-      <img src="imagenes/antes2.jpg" alt="Resultado 5 - Antes y después">
-      <img src="imagenes/antes4.jpg" alt="Resultado 6 - Antes y después">
+    <div class="galeria-resultados">
+      <figure>
+        <img src="imagenes/antes1.jpg" alt="Tratamiento 1 Monsant">
+      </figure>
+      <figure>
+        <img src="imagenes/antes2.jpg" alt="Tratamiento 2 Monsant">
+      </figure>
+      <figure>
+        <img src="imagenes/antes3.jpg" alt="Tratamiento 3 Monsant">
+      </figure>
+      <figure>
+        <img src="imagenes/antes4.jpg" alt="Tratamiento 4 Monsant">
+      </figure>
     </div>
   </section>
-
-
-
 
   
   <main>
