--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -8,98 +9,82 @@
   <link rel="icon" type="image/png" href="iconos/favicon.png">
 </head>
 <body id="top">
-    <header class="header-minimal">
-      <div class="contenedor-header">
-        <a href="#top" class="logo-link">
-          <img src="iconos/logo mst_3.jpg" alt="Logo Monsant" class="logo">
-        </a>
-
-        <nav class="menu-minimal">
-          <ul>
-              <li>
-                <a href="#idioma" class="idioma">
-                  <img src="iconos/english.png" alt="English" class="icono-bandera">
-                  English
-                </a>
-              </li>
-            <li><a href="#servicios">Servicios</a></li>
-            <li><a href="#Equipo">Equipo</a></li>
-            <li><a href="#resultados">Resultados</a></li>
-            <li><a href="#testimonios">Testimonios</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-
-  <section id="servicios" class="fade-in">
-    <h2>Servicios</h2>
-    <div class="servicios-contenedor">
-      <div class="servicio">
-        <img src="imagenes/servicio1.jpg" alt="Limpieza dental">
-        <h3>Limpieza Dental</h3>
-        <p>Eliminación de placa y sarro para mantener tu sonrisa sana y brillante.</p>
-      </div>
-      <div class="servicio">
-        <img src="imagenes/servicio2.jpg" alt="Ortodoncia">
-        <h3>Ortodoncia</h3>
-        <p>Corrección de la posición dental con brackets o alineadores transparentes.</p>
-      </div>
-      <div class="servicio">
-        <img src="imagenes/servicio3.jpg" alt="Blanqueamiento dental">
-        <h3>Blanqueamiento</h3>
-        <p>Tratamientos estéticos para lograr dientes más blancos en pocas sesiones.</p>
-      </div>
+  <header class="header-minimal">
+    <div class="contenedor-header">
+      <a href="#top" class="logo-link">
+        <img src="iconos/logo-mst_3.jpg" alt="Logo Monsant" class="logo">
+      </a>
+      <nav class="menu-minimal">
+        <ul>
+          <li>
+            <a href="#idioma" class="idioma">
+              <img src="iconos/english.png" alt="English" class="icono-bandera"> English
+            </a>
+          </li>
+          <li><a href="#servicios">Servicios</a></li>
+          <li><a href="#equipo">Equipo</a></li>
+          <li><a href="#resultados">Resultados</a></li>
+          <li><a href="#testimonios">Testimonios</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+        </ul>
+      </nav>
     </div>
-  </section>
-  <section id="Equipo">
-    <h2>Conoce a nuestro equipo</h2>
-    <div class="equipo-grid">
-      <article>
-        <img src="imagenes/SantiagoMon.png" alt="Dr. Santiago Monsanlve">
-        <h3>Dr. Andrés Monsant</h3>
-        <p>Odontólogo especializado en estética dental y ortodoncia. +10 años de experiencia.</p>
-      </article>
-      <article>
-        <img src="imagenes/SantiagoMon.png" alt="Dra. Maria Clara Uribe">
-        <h3>Dra. Maria Clara Uribe</h3>
-        <p>Ortodoncista Especialista. +10 años de experiencia.</p>
-      </article>
-      <!-- más miembros -->
-    </div>
-  </section>
-  
+  </header>
+
   <main>
+    <section id="servicios" class="fade-in">
+      <h2>Servicios</h2>
+      <div class="servicios-contenedor">
+        <div class="servicio">
+          <img src="imagenes/servicio1.jpg" alt="Limpieza dental">
+          <h3>Limpieza Dental</h3>
+          <p>Eliminación de placa y sarro para mantener tu sonrisa sana y brillante.</p>
+        </div>
+        <div class="servicio">
+          <img src="imagenes/servicio2.jpg" alt="Ortodoncia">
+          <h3>Ortodoncia</h3>
+          <p>Corrección de la posición dental con brackets o alineadores transparentes.</p>
+        </div>
+        <div class="servicio">
+          <img src="imagenes/servicio3.jpg" alt="Blanqueamiento dental">
+          <h3>Blanqueamiento</h3>
+          <p>Tratamientos estéticos para lograr dientes más blancos en pocas sesiones.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="equipo" class="fade-in">
+      <h2>Conoce a nuestro equipo</h2>
+      <div class="equipo-grid">
+        <article>
+          <img src="imagenes/SantiagoMon.png" alt="Dr. Andrés Monsant">
+          <h3>Dr. Andrés Monsant</h3>
+          <p>Odontólogo especializado en estética dental y ortodoncia. +10 años de experiencia.</p>
+        </article>
+        <article>
+          <img src="imagenes/SantiagoMon.png" alt="Dra. Maria Clara Uribe">
+          <h3>Dra. Maria Clara Uribe</h3>
+          <p>Ortodoncista Especialista. +10 años de experiencia.</p>
+        </article>
+      </div>
+    </section>
+
     <section id="contacto" class="fade-in">
       <h2>Contáctanos</h2>
       <div class="contacto-contenedor">
         <div class="mapa">
-          <iframe 
+          <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.0682245530907!2d-75.5826136244777!3d6.254742326227069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4429342b0381af%3A0xc086c21b5733f39e!2sMonsant!5e0!3m2!1ses!2sco!4v1751381843076!5m2!1ses!2sco"
-            width="100%"
-            height="300"
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
+            width="100%" height="300" style="border:0;" allowfullscreen loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="info-redes">
           <p><strong>📍 Dirección:</strong> Cl. 49B #64b-37, Laureles - Estadio, Medellín, Antioquia</p>
           <p><strong>📞 Teléfono:</strong> <a href="tel:+573045822043">304 582 2043</a></p>
-
-          <a href="https://wa.me/573045822043" class="boton-cita" target="_blank" rel="noopener">
-            💬 Agendar cita por WhatsApp
-          </a>
-
-        
-
-          <a href="https://www.google.com/maps/place/Monsant/@6.2547423,-75.5826136,17z/data=!4m8!3m7!1s0x8e4429342b0381af:0xc086c21b5733f39e!8m2!3d6.2547423!4d-75.5800387!9m1!1b1!16s%2Fg%2F11t6bcprzp?entry=ttu"
-             class="boton-google" target="_blank" rel="noopener">
+          <a href="https://wa.me/573045822043" class="boton-cita" target="_blank" rel="noopener">💬 Agendar cita por WhatsApp</a>
+          <a href="https://www.google.com/maps/place/Monsant/@6.2547423,-75.5826136,17z" class="boton-google" target="_blank" rel="noopener">
             ⭐⭐⭐⭐⭐ Déjanos una reseña en Google
           </a>
-        </div>
-
         </div>
       </div>
     </section>
@@ -108,17 +93,17 @@
   <p class="invisible">
     Consultorio odontológico Monsant en Medellín, especialistas en ortodoncia, estética dental, implantes y más. Ubicados en Laureles, atención profesional con tecnología de punta.
   </p>
+
   <div class="redes-flotantes">
     <a href="https://wa.me/573045822043" target="_blank" aria-label="WhatsApp Monsant">
       <img src="iconos/whatsapp.png" alt="WhatsApp">
     </a>
-    <a href="https://www.instagram.com/monsant_odontologia?igsh=MWE1c3UyMDljNGxtMw==" target="_blank" aria-label="Instagram Monsant">
+    <a href="https://www.instagram.com/monsant_odontologia" target="_blank" aria-label="Instagram Monsant">
       <img src="iconos/instagram.png" alt="Instagram">
     </a>
-    <a href="https://www.tiktok.com/@monsant_odontolog?_t=ZS-8xfREG8hBFQ&_r=1" target="_blank" aria-label="TikTok Monsant">
+    <a href="https://www.tiktok.com/@monsant_odontolog" target="_blank" aria-label="TikTok Monsant">
       <img src="iconos/tik-tok.png" alt="TikTok">
     </a>
   </div>
-
 </body>
 </html>
