carrusel de imagenes bueno

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </li>
           <li><a href="#servicios">Servicios</a></li>
           <li><a href="#equipo">Equipo</a></li>
-          <li><a href="#resultados">Resultados</a></li>
+          <li><a href="#carrusel">Resultados</a></li>
           <li><a href="#testimonios">Testimonios</a></li>
           <li><a href="#contacto">Contacto</a></li>
         </ul>
