imagenes para carrusel

--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
         <div class="carrusel-slide">
           <img src="imagenes/antes4.jpg" alt="Resultado 4">
         </div>
+        <div class="carrusel-slide">
+          <img src="imagenes/antes5.jpg" alt="Resultado 4">
+        </div>
+        <div class="carrusel-slide">
+          <img src="imagenes/antes6.jpg" alt="Resultado 4">
+        </div>
+        <div class="carrusel-slide">
+          <img src="imagenes/antes7.jpg" alt="Resultado 4">
+        </div>
+        <div class="carrusel-slide">
+          <img src="imagenes/antes8.jpg" alt="Resultado 4">
+        </div>
         <button class="carrusel-prev">&#10094;</button>
         <button class="carrusel-next">&#10095;</button>
       </div>
