imagenes de servicios

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
       <h2>Servicios</h2>
       <div class="servicios-contenedor">
         <div class="servicio">
-          <img src="imagenes/servicio1.jpg" alt="Limpieza dental">
+          <img src="imagenes/servicio1.webp" alt="Limpieza dental">
           <h3>Limpieza Dental</h3>
           <p>Eliminación de placa y sarro para mantener tu sonrisa sana y brillante.</p>
         </div>
         <div class="servicio">
-          <img src="imagenes/servicio2.jpg" alt="Ortodoncia">
+          <img src="imagenes/servicio2.webp" alt="Ortodoncia">
           <h3>Ortodoncia</h3>
           <p>Corrección de la posición dental con brackets o alineadores transparentes.</p>
         </div>
         <div class="servicio">
-          <img src="imagenes/servicio3.jpg" alt="Blanqueamiento dental">
+          <img src="imagenes/servicio3.webp" alt="Blanqueamiento dental">
           <h3>Blanqueamiento</h3>
           <p>Tratamientos estéticos para lograr dientes más blancos en pocas sesiones.</p>
         </div>
@@ -166,7 +166,6 @@
       showSlide(index);
     }, 5000);
   </script>
-
   
 </body>
 </html>
