Actualizamos fotos equipo

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!google ADS>
+    
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monsant Especialistas en Odontología</title>
@@ -43,7 +45,7 @@
         <div class="servicio">
           <img src="imagenes/servicio2.webp" alt="Ortodoncia">
           <h3>Ortodoncia</h3>
-          <p>Corrección de la posición dental con brackets o alineadores transparentes.</p>
+          <p>Corrección de la posición dental con brackets o alineadores invisibles.</p>
         </div>
         <div class="servicio">
           <img src="imagenes/servicio3.webp" alt="Blanqueamiento dental">
@@ -57,12 +59,12 @@
       <h2>Conoce a nuestro equipo</h2>
       <div class="equipo-grid">
         <article>
-          <img src="imagenes/SantiagoMon.png" alt="Dr. Andrés Monsant">
-          <h3>Dr. Andrés Monsant</h3>
+          <img src="imagenes/DrSantiago Monsalve.jpg" alt="Dr. Andrés Monsant">
+          <h3>Dr. Santiago Monsant</h3>
           <p>Odontólogo especializado en estética dental y ortodoncia. +10 años de experiencia.</p>
         </article>
         <article>
-          <img src="imagenes/SantiagoMon.png" alt="Dra. Maria Clara Uribe">
+          <img src="imagenes/DraMariaClaraUribe.jpg" alt="Dra. Maria Clara Uribe">
           <h3>Dra. Maria Clara Uribe</h3>
           <p>Ortodoncista Especialista. +10 años de experiencia.</p>
         </article>
