--- a/index.html
+++ b/index.html
@@ -55,16 +55,20 @@
       </div>
     </section>
 
-    <section id="equipo" class="fade-in">
+    <section id="equipo">
       <h2>Conoce a nuestro equipo</h2>
       <div class="equipo-grid">
-        <article>
-          <img src="imagenes/DrSantiago Monsalve.jpg" alt="Dr. Andrés Monsant">
+        <article class="tarjeta-equipo">
+          <div class="foto-cuadrada">
+            <img src="imagenes/DrSantiago Monsalve.jpg" alt="Dr. Santiago Monsant">
+          </div>
           <h3>Dr. Santiago Monsant</h3>
           <p>Odontólogo especializado en estética dental y ortodoncia. +10 años de experiencia.</p>
         </article>
-        <article>
-          <img src="imagenes/DraMariaClaraUribe.jpg" alt="Dra. Maria Clara Uribe">
+        <article class="tarjeta-equipo">
+          <div class="foto-cuadrada">
+            <img src="imagenes/DraMariaClaraUribe.jpg" alt="Dra. Maria Clara Uribe">
+          </div>
           <h3>Dra. Maria Clara Uribe</h3>
           <p>Ortodoncista Especialista. +10 años de experiencia.</p>
         </article>
