--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <!google ADS>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LYZ19RY8VX">
+    </script>
+    <script> window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-LYZ19RY8VX');
+    </script>
     
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
