Certificada ssl codigo

--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
     }, 5000);
   </script>
   
+  <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSealBasic?sealID=w5oeTjMuf9evXWAKrTCwy6CsSrKEUXznGCeqrMM9c3xTOa593c6td0GRt7Qk"></script></span>
+  
   
 </body>
 </html>
