--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
       <h2>Servicios</h2>
       <div class="servicios-contenedor">
         <div class="servicio">
-          <img src="imagenes/servicio1.webp" alt="Limpieza dental">
+          <img src="imagenes/servicio1.jpg" alt="Limpieza dental">
           <h3>Limpieza Dental</h3>
-          <p>Eliminación de placa y sarro para mantener tu sonrisa sana y brillante.</p>
+          <p>Eliminación de placa y sarro para mantener tu sonrisa sana.</p>
         </div>
         <div class="servicio">
-          <img src="imagenes/servicio2.webp" alt="Ortodoncia">
+          <img src="imagenes/servicio2.jpg" alt="Ortodoncia">
           <h3>Ortodoncia</h3>
           <p>Corrección de la posición dental con brackets o alineadores invisibles.</p>
         </div>
         <div class="servicio">
-          <img src="imagenes/servicio3.webp" alt="Blanqueamiento dental">
-          <h3>Blanqueamiento</h3>
-          <p>Tratamientos estéticos para lograr dientes más blancos en pocas sesiones.</p>
+          <img src="imagenes/servicio3.jpg" alt="Blanqueamiento dental">
+          <h3>Diseño de Sonrisa</h3>
+          <p>Tratamientos estéticos para lograr la sonrisa que quieres.</p>
         </div>
       </div>
     </section>
@@ -67,7 +67,7 @@
           <div class="foto-cuadrada">
             <img src="imagenes/DrSantiago Monsalve.jpg" alt="Dr. Santiago Monsant">
           </div>
-          <h3>Dr. Santiago Monsant</h3>
+          <h3>Dr. Santiago Monsalve</h3>
           <p>Odontólogo especializado en estética dental y ortodoncia. +10 años de experiencia.</p>
         </article>
         <article class="tarjeta-equipo">
@@ -126,7 +126,7 @@
           <p><strong>📍 Dirección:</strong> Cl. 49B #64b-37, Laureles - Estadio, Medellín, Antioquia</p>
           <p><strong>📞 Teléfono:</strong> <a href="tel:+573045822043">304 582 2043</a></p>
           <a href="https://wa.me/573045822043" class="boton-cita" target="_blank" rel="noopener">💬 Agendar cita por WhatsApp</a>
-          <a href="https://www.google.com/maps/place/Monsant/@6.2547423,-75.5826136,17z" class="boton-google" target="_blank" rel="noopener">
+          <a href="https://maps.app.goo.gl/w3cCDr2RnUzEuKsa6" class="boton-google" target="_blank" rel="noopener">
             ⭐⭐⭐⭐⭐ Déjanos una reseña en Google
           </a>
         </div>
