--- a/index.html
+++ b/index.html
@@ -22,17 +22,6 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="iconos/favicon.png">
 </head>
-<script>
-  const toggleBtn = document.getElementById('toggle-lang');
-  toggleBtn.addEventListener('click', () => {
-    const isEnglish = toggleBtn.textContent.includes('English');
-    document.getElementById('servicios').style.display = isEnglish ? 'none' : 'block';
-    document.getElementById('servicios-en')?.style.display = isEnglish ? 'block' : 'none';
-    toggleBtn.innerHTML = isEnglish
-      ? '<img src="iconos/spanish.png" class="icono-bandera"> Español'
-      : '<img src="iconos/english.png" class="icono-bandera"> English';
-  });
-</script>
 
 <link rel="apple-touch-icon" sizes="180x180" href="iconos/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="iconos/favicon-32x32.png">
@@ -206,6 +195,17 @@
   
   <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSealBasic?sealID=w5oeTjMuf9evXWAKrTCwy6CsSrKEUXznGCeqrMM9c3xTOa593c6td0GRt7Qk"></script></span>
   
+  <script>
+    const toggleBtn = document.getElementById('toggle-lang');
+    toggleBtn.addEventListener('click', () => {
+      const isEnglish = toggleBtn.textContent.includes('English');
+      document.getElementById('servicios').style.display = isEnglish ? 'none' : 'block';
+      document.getElementById('servicios-en')?.style.display = isEnglish ? 'block' : 'none';
+      toggleBtn.innerHTML = isEnglish
+        ? '<img src="iconos/spanish.webp" class="icono-bandera"> Español'
+        : '<img src="iconos/english.png" class="icono-bandera"> English';
+    });
+  </script>
   
 </body>
 </html>
